# sxhkd-cheatsheet

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: package.yaml
examples/: sample_sxhkdrc
src/: argument_parser.cpp  argument_parser.hpp  display.cpp  extractor.cpp  group.cpp  main.cpp  shortcut.cpp
